fixed gaps & fonts

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -6,10 +6,10 @@
   align-items: center;
 }
 
+
 .navBar {
   display: flex;
   flex-direction: row;
-  gap: 1rem;
   width: fit-content;
   height: fit-content;
   background-color: var(--color-secondary);
@@ -28,6 +28,7 @@
   gap: 0;
   justify-content: center;
   width: 100%;
+  gap: 1.125rem;
 }
 
 .tabsContainer a {
@@ -72,7 +73,7 @@
   flex-direction: row-reverse;
   justify-content: flex-start;
   align-items: center;
-  gap: 15px;
+  gap: 7px;
   z-index: 10;
   width: 100%;
   padding: 10px 20px;
