--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,6 @@
+@import url("reset.css");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+
 /* Calendar icon size for button (unified with whatsappLink) */
 /* Remove default blue highlight/active background on tap/click for all elements */
 button, a, input, textarea, select, [tabindex] {
@@ -15,8 +18,6 @@ button, a, input, textarea, select, [tabindex] {
   scrollbar-width: none;     /* Firefox */
 }
 
-@import url("reset.css");
-@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 /* Define design variables */
 :root {
@@ -93,7 +94,7 @@ body {
 /* Layout */
 main {
   max-width: 60rem;
-  padding: 2rem;
+  padding: 1rem;
   margin: 0 auto;
   width: 100%;
   box-sizing: border-box;
@@ -123,8 +124,6 @@ h1, h2, h3, h4, h5, h6 {
 h1 { 
   font-size: 1.75rem;
   font-weight: 500;
-  line-height: 22px;
-
  }
 h2 { 
   font-size: 1.375rem;
@@ -210,6 +209,7 @@ table th {
   height: 20px;
   border: none;
   outline: none;
+  object-fit: contain;
 }
 
 .notification-badge {
